# openGL_learning

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hephaestus-openGL  imgui.ini  output_audio.mp3:
include/assimp/: revision.h
include/glad/: glad.h
levels/: one.lvl
shaders/: light_cube_shader.fs  shader.fs  shader.vs
src/: game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  glad.c  main.cpp  main_char.cpp  main_char.h  mesh.h  model.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  shader_s.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
